Convert to Full-Stack Monorepo (Next.js + Spring Boot)
- Restructured repository into /backend and /frontend.
- Implemented Next.js 14 frontend with App Router, TypeScript, and Tailwind.
- Containerized backend with Dockerfile and railway.json.
- Updated backend for environment-variable-based configuration and dynamic CORS.
- Added docker-compose.yml for local full-stack development.
- Overwrote README.md with comprehensive deployment guides.

Co-authored-by: ukadike2006-stack <281614797+ukadike2006-stack@users.noreply.github.com>